--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -24,7 +24,10 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r requirements.txt
 
+    - name: Install package
+      run: |
+        pip install -e src
+
     - name: Run tests
       run: |
-        export PYTHONPATH=${{ github.workspace }}/src
         pytest
