--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -26,7 +26,7 @@ jobs:
 
     - name: Install package
       run: |
-        pip install -e src
+        pip install -e .
 
     - name: Run tests
       run: |
